# Yanck

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  chatbots.py  health.py
backend/app/core/: celery.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chatbot.py  conversation.py  mixins.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  chatbot.py  user.py
backend/app/services/: __init__.py  auth.py  chatbots.py  embeddings.py  rag.py  storage.py  text.py  users.py  vector_store.py
backend/app/services/providers/: __init__.py  gemini.py
backend/migrations/: env.py
backend/migrations/versions/: 20241102_000001_initial_schema.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chatbots.py  test_gemini_client.py  test_health.py  test_vector_store.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  setupTests.ts  test-utils.tsx  types.ts
frontend/src/__tests__/: ChatPanel.test.tsx  ChatbotsPage.test.tsx
frontend/src/components/: ChatPanel.tsx
frontend/src/context/: AuthContext.tsx
worker/: Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
worker/app/core/: config.py
worker/app/tasks/: __init__.py  ingest.py
worker/tests/: test_config.py
(+5 files in other folders)
