[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.64",
    "celery>=5.5.3",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "pypdf>=4.3.1",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]
